# EmojiServer

./: .gitignore  README.md  pyproject.toml
src/emojiserver/: __init__.py  __main__.py  dataset.py  server.py
