[project]
name = "EmojiServer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "NingmengLemon", email = "60469383+NingmengLemon@users.noreply.github.com" },
]
dependencies = ["aiohttp>=3.10.10", "aiofiles>=24.1.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[tool.pdm.scripts]
app = { cmd = ["python", "-m", "src.emojiserver"] }

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
